<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.home.MainActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="343dp" />

    <TextView
        android:id="@+id/output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/outputHint"
        android:textAlignment="center"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@id/editText"
        app:layout_constraintStart_toStartOf="@id/editText"
        app:layout_constraintTop_toBottomOf="@id/editText" />

    <Button
        android:id="@+id/doMath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/calc"
        app:layout_constraintEnd_toEndOf="@id/editText"
        app:layout_constraintStart_toStartOf="@id/editText"
        app:layout_constraintTop_toBottomOf="@id/output" />

    <Button
        android:id="@+id/viewList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/viewList"
        app:layout_constraintEnd_toEndOf="@id/doMath"
        app:layout_constraintStart_toStartOf="@id/doMath"
        app:layout_constraintTop_toBottomOf="@id/doMath" />
</androidx.constraintlayout.widget.ConstraintLayout>