<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.list.ListActivity"
    android:focusableInTouchMode="true">

    <EditText
        android:id="@+id/search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/searchHint"
        android:inputType="textAutoComplete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/results"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/horizontalMargin"
        android:layout_marginTop="@dimen/verticalMargin"
        android:layout_marginEnd="@dimen/horizontalMargin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="@+id/results"
        app:layout_constraintEnd_toEndOf="@+id/results"
        app:layout_constraintStart_toStartOf="@+id/results"
        app:layout_constraintTop_toTopOf="@+id/results" />

</androidx.constraintlayout.widget.ConstraintLayout>